course_materials/M5-Solution-Advanced-Concepts/task3/ingress-sample/contour-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: contour
spec:
  controller: projectcontour.io/projectcontour/contour
